fixing responsive on mobile

--- a/weather/src/components/Conditions/Clouds/styles.css
+++ b/weather/src/components/Conditions/Clouds/styles.css
@@ -2,9 +2,9 @@
 .clouds-1, .clouds-2, .clouds-3 {
     position: absolute;
     transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    animation: moveClouds 30s linear infinite;
+    width: 100vw; 
+    height: 100vh;
+    animation: moveClouds 60s linear infinite;
     pointer-events: none; /* Don't affect user interactions */
 }
 
